# query-builder-widget

./: .gitignore  README.md  pyproject.toml
app/: backend.py
src/qb_widget/: app.py  main.py
src/qb_widget/assets/styles/: __init__.py  app.css  node.css  query.css  results.css
src/qb_widget/components/: __init__.py  help.py  info.py  node.py  query.py  result.py  results.py
src/qb_widget/models/: __init__.py  node.py  result.py
src/qb_widget/services/: __init__.py  aiida.py
src/qb_widget/utils/: console.py  info.py
